# soteria-webapp

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  API_return_template.json  Dockerfile  Makefile  README.md  README.rst  TEMPLATE-project.json  TEMPLATE-user.json  docker-compose.yaml  mypy.ini  pyproject.toml  requirements.txt  run.sh  run_docker.sh  run_local.sh  set_version.py  wsgi.py
.github/workflows/: build.yaml
config_templates/: config.py
data-templates/: TEMPLATE-error-verification.json  TEMPLATE-project.json  TEMPLATE-projects.json  TEMPLATE-success-verification.json  TEMPLATE-user.json
drafts/repositories/: __init__.py
drafts/repositories/templates/macros/: project-card.html
drafts/repository/: blueprints.py
drafts/repository/templates/: repository.html  tags.html
drafts/repository/templates/macros/: repo-desc-card.html  subnavigation.html  tag-card-advanced.html  tag-card-basic.html  user-card.html
drafts/test/: __init__.py
etc/httpd/conf.d/: httpd.conf  httpd.conf.tmpl
etc/supervisord.d/: httpd.conf  redis.ini  soteria-polling-loop.ini
examples/: config.py  mock_user_with_orcid.py  mock_user_without_orcid.py
registry/: __init__.py  api_client.py  app.py  cache.py  cli.py  comanage.py  database.py  forms.py  freshdesk.py  harbor.py  harbor_wrapper.py  logging.py  processing.py  public.py  py.typed  security.py  util.py  website.py
registry/about/: __init__.py  blueprints.py
registry/about/templates/: about.html
registry/account/: __init__.py  blueprints.py
registry/account/templates/: account.html
registry/api/: debug.py  harbor.py  harbor_proxy.py  v1.py
registry/api/test/: blueprints.py
registry/api/v1/: __init__.py  blueprints.py
registry/debug/: __init__.py  blueprints.py
registry/index/: __init__.py  views.py
registry/index/templates/: index.html
registry/registration/: __init__.py  blueprints.py
registry/registration/templates/: registration.html
registry/repositories/: __init__.py  blueprints.py
registry/repositories/templates/: repositories.html
registry/repositories/templates/macros/: project-card.html
registry/repository/: __init__.py  blueprints.py
registry/repository/templates/: collaborators.html  repository.html  tags.html
registry/repository/templates/macros/: repo-desc-card.html  subnavigation.html  tag-card-advanced.html  tag-card-basic.html  user-card.html
registry/static/: _bootswatch.scss  _variables.scss  account.js  main.js  registration.js  style.scss
registry/static/bootstrap/: _alert.scss  _mixins.scss  _navbar.scss  _popover.scss  _variables.scss
registry/static/js/: account.js  registration.js
registry/static/js/components/: card.js  list.js  util.js
registry/static/js/helpers/: project.js  user.js
registry/templates/: about.html  account.html  base.html  error.html  index.html  project-repositories.html  projects.html  registration.html  researcher-registration.html
registry/templates/admin/: statistics.html
registry/templates/layout/: base.html
registry/templates/macros/: card.html  general.html  page-header.html  registration.html
registry/templates/macros/layout/: footer.html  navbar.html  title.html
registry/templates/public/: image.html  projects.html  repositories.html  tags.html
registry/templates/user/: account.html  assistant.html  create-project.html  layout.html  projects.html  researcher-registration.html
registry/templates/user/includes/: sidebar.html
registry/templates/user/macros/: nav_item.html
registry/templates/user/project/: create-starter.html  create.html  list.html
registry/templates/user/robot/: create.html
registry/tests/: README.md  comanage.py  harbor.py  util.py
registry/website/: __init__.py  blueprints.py
registry/website/templates/: account.html  index.html  registration.html
scripts/: get_stats.py
secrets/: .gitignore  tls.req
secrets/oidc/: .gitignore
templates/: config.py  htcondor.conf  mock_data.py  mock_oidc_claim.py
tests/: README.md  comanage.py  harbor.py  util.py
