## Project requirements (PEP 518, https://python-poetry.org/).


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]


[tool.black]
line-length = 80
target-version = ["py39"]


[tool.isort]
line_length = 80
profile = "black"


[tool.mypy]
explicit_package_bases = true
namespace_packages = true

check_untyped_defs = true
strict_optional = true
no_implicit_optional = true

warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

color_output = false
pretty = true
show_error_codes = true

incremental = true
sqlite_cache = true


[tool.poetry]
name = "soteria_webapp"
version = "0.0.1"
description = "SOTERIA web application"
license = "Apache-2.0"
authors = [
    "Brian Aydemir <baydemir@morgridge.org>",
    "Cannon Lock <clock@wisc.edu>",
]
repository = "https://github.com/osg-htc/soteria-webapp"
packages = [{ include = "registry" }]


[tool.poetry.dependencies]
python = "~3.9.7"
Flask = "~2.2"
Flask-Assets = "~2.0"
Flask-WTF = "~1.1"
ldap3 = "~2.9"
libsass = "~0.22"
requests = "~2.28"
typing-extensions = "~4.5"


[tool.poetry.group.dev.dependencies]
bandit = "~1.7"
black = "~23.3"
docutils = "~0.19"
isort = "~5.12"
mypy = "~1.2"
pre-commit = "~3.2"
pylint = "~2.17"
"ruamel.yaml.cmd" = "~0.6"
safety = "~2.3"
types-requests = "~2.28"


[tool.pylint.messages-control]
max-line-length = 80
disable = "invalid-name,missing-class-docstring,missing-function-docstring"
