## Project requirements (PEP 518, https://python-poetry.org/).


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]


[tool.black]
line-length = 96
target-version = ["py39", "py310", "py311", "py312"]


[tool.isort]
line_length = 96
profile = "black"


[tool.mypy]
explicit_package_bases = true
namespace_packages = true

check_untyped_defs = true
strict_optional = true
no_implicit_optional = true

warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

color_output = false
pretty = true
show_error_codes = true

incremental = true
sqlite_cache = true


[tool.poetry]
name = "soteria_webapp"
version = "0.0.1"
description = "SOTERIA web application"
license = "Apache-2.0"
authors = [
    "Brian Aydemir <baydemir@morgridge.org>",
    "Cannon Lock <clock@wisc.edu>",
]
repository = "https://github.com/osg-htc/soteria-webapp"
packages = [{ include = "registry" }]


[tool.poetry.dependencies]
python = "^3.9"
Flask = "~3.0"
Flask-Assets = "~2.1"
Flask-Caching = "~2.1"
Flask-WTF = "~1.2"
ldap3 = "~2.9"
libsass = "~0.23"
requests = "~2.31"
typing-extensions = "~4.10"


[tool.poetry.group.dev.dependencies]
bandit = "~1.7"
black = "~24.3"
docutils = "~0.20"
isort = "~5.13"
mypy = "~1.9"
pre-commit = "~3.7"
pylint = "~3.1"
types-requests = "~2.31"


[tool.pylint.messages-control]
max-line-length = 96
disable = "invalid-name,missing-class-docstring,missing-function-docstring"
